# model-multilingual-translator

./: README.md  main.py  pyproject.toml  requirements.txt  tradutor_notebook.ipynb  translations.txt  translator_app.py
config/: requirements.txt
models/: translation_model.py
services/: text_sanitizer.py  translation_service.py
storage/: file_storage.py
