[tool.poetry]
name = "tradutor-llm"
version = "0.1.0"
description = ""
authors = ["Nathan Souza <naathanmarinho11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
transformers = "^4.42.3"
torch = "^2.3.1"
pyngrok = "^7.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
